# neural-network

./: .gitignore  CMakeLists.txt  README.md  network
include/: activation.hpp  matrix.hpp  network.hpp
src/: activation.cpp  main.cpp  matrix.cpp  network.cpp
tests/: activation_test.cpp  add_test.cpp  dot_test.cpp  network_test.cpp  transpose_test.cpp
